# mcp-cli

./: .gitignore  .tool-versions  CHAT_SUMMARY.md  chat.py  chat_handler.py  chat_session.py  command_router.py  config.py  config_types.py  example.py  mcp_utils.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_test.sh  server_config.json  server_config.json.example  server_manager.py  setup.py  setup.sh  test_command_router.py  test_config.json  test_config.py  test_mcp_servers.py  test_server_manager.py  test_workflow.py  tool_utils.py
docs/: MCP_CONTEXT.md
mcp_cli/: __init__.py  command_router.py  config_types.py  server_manager.py
mcp_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_cli/messages/: json_rpc_message.py  send_message.py  tools.py
mcp_cli/servers/: __init__.py  command_router.py  filesystem_server.py  ollama_server.py  puppeteer.py  puppeteer_server.js  server_manager.py  sqlite.py  tool_router.py
mcp_cli/tools/: __init__.py  tool_discovery.py  tool_router.py  tool_schema.py
servers/: ollama_server.py
tests/: README.md  conftest.py  test_ollama_server.py
tests/integration/: test_filesystem_integration.py  test_mcp_servers.py  test_multi_tool_workflow.py  test_ollama_integration.py  test_ollama_real.py
tests/spec/: ollama_server_spec.py
tests/unit/: test_command_router.py  test_config.py  test_filesystem_server.py  test_ollama_server.py  test_server_manager.py  test_tool_discovery.py  test_tool_schema.py
tools/: tool_discovery.py  tool_router.py
transport/stdio/: server_startup.py  (+2 more)
(+3 files in other folders)
