[project]
name = "mcp-cli"
version = "0.1.0"
description = "a cli for the Model Context Provider"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.6.2.post1",
    "asyncio>=3.4.3",
    "ollama>=0.4.2",
    "openai>=1.55.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_spec.py"]
python_classes = ["Test*", "Describe*"]
python_functions = ["test_*", "it_*"]
